## Process this with automake to create Makefile.in

AUTOMAKE_OPTIONS = foreign

SUFFIXES = .java .class

javadir=$(datadir)/java/$(subdir)

java_JAVA=\
  ApplyExp.java \
  BeginExp.java \
  BindingInitializer.java \
  BlockExp.java \
  CatchClause.java \
  ChainLambdas.java \
  CheckedTarget.java \
  ClassExp.java \
  Compilable.java \
  Compilation.java \
  ConditionalTarget.java \
  Declaration.java \
  ErrorExp.java \
  ExitExp.java \
  Expression.java \
  ExpFullWalker.java \
  ExpWalker.java \
  FindCapturedVars.java \
  FindTailCalls.java \
  FluidLetExp.java \
  GenericProc.java \
  IfExp.java \
  IgnoreTarget.java \
  Initializer.java \
  Inlineable.java \
  Keyword.java \
  LambdaExp.java \
  LetExp.java \
  Literal.java \
  MethodProc.java \
  ModuleBody.java \
  ModuleMethod.java \
  ModuleExp.java \
  ObjectExp.java \
  QuoteExp.java \
  PrimProcedure.java \
  ProcInitializer.java \
  PushApply.java \
  ReferenceExp.java \
  ScopeExp.java \
  SetApplyExp.java \
  SetExp.java \
  Special.java \
  StackTarget.java \
  Symbol.java \
  SynchronizedExp.java \
  TailTarget.java \
  Target.java \
  TryExp.java \
  Undefined.java

EXTRA_DIST = overview.html
