## Process this with automake to create Makefile.in

AUTOMAKE_OPTIONS = foreign

@Make_rules@

java_sources=\
  AliasConstraint.java \
  ApplyMethodContainer.java ApplyMethodProc.java \
  Binding.java \
  BindingEnumeration.java \
  Constraint.java UnboundConstraint.java TrivialConstraint.java \
  ConstantConstraint.java \
  IndirectConstraint.java \
  CallFrame.java CpsProcedure.java \
  CpsMethodContainer.java CpsMethodProc.java \
  Environment.java \
  FluidBinding.java \
  FluidConstraint.java \
  Future.java \
  HasSetter.java \
  InPort.java \
  Location.java \
  LogWriter.java \
  MethodProc.java \
  NameMap.java \
  Named.java \
  OutPort.java \
  CharArrayInPort.java \
  CharArrayOutPort.java \
  Printable.java \
  ProcLocation.java \
  Procedure.java \
  Procedure0.java \
  Procedure0or1.java \
  Procedure1.java \
  Procedure1or2.java \
  Procedure2.java \
  Procedure3.java \
  Procedure4.java \
  ProcedureN.java \
  SFormat.java \
  Setter.java \
  Setter0.java \
  Setter1.java \
  TtyInPort.java \
  UnboundSymbol.java \
  Values.java \
  ValueStack.java \
  WrappedException.java \
  WrongArguments.java \
  WrongType.java

java_BUILT = \
  CallContext.java

if WITH_JAVA_REFERENCES
SED_REFERENCES_SUBS = $(DONT_EDIT_SUBS) \
  -e '/@if WITHOUT REFERENCES@/,/@endif WITHOUT REFERENCES@/d' \
  -e '/@*if WITH REFERENCES@/d'
else
SED_REFERENCES_SUBS = $(DONT_EDIT_SUBS) \
  -e '/@if WITH REFERENCES@/,/@endif WITH REFERENCES@/d' \
  -e '/@*if WITHOUT REFERENCES@/d'
endif

CallContext.java: $(srcdir)/CallContext.java.in
	sed $(SED_REFERENCES_SUBS) \
	  -e '1s|//.*-Java-.*|// This file is automatically generated from QName.java.in.|' \
	  <$(srcdir)/CallContext.java.in >CallContext.java


BUILT_SOURCES = $(java_BUILT)
java_Java= $(java_BUILT) $(java_sources)
EXTRA_DIST = package.html CallContext.java.in

PACKAGE_FNAME = gnu-mapping
GCJ_INPUTS =  $(java_Java)

all: Makefile java-classes.stamp $(@GCJ_COMPILED_SELECTED@)
