## Process this with automake to create Makefile.in

AUTOMAKE_OPTIONS = foreign

SUFFIXES = .java .class

javadir=$(datadir)/java/$(subdir)

java_JAVA=\
  LineBufferedReader.java SourceError.java Lexer.java SyntaxException.java \
  LispReader.java \
  ReportFormat.java LiteralFormat.java PadFormat.java CompoundFormat.java \
  RomanIntegerFormat.java EnglishIntegerFormat.java \
  CaseConvertFormat.java FlushFormat.java
