# Process this with automake to create Makefile.in

AUTOMAKE_OPTIONS = foreign

SUFFIXES = .java .class

javadir=$(datadir)/java/$(subdir)

java_JAVA=\
set_b.java \
quasiquote.java \
prim_method.java prim_throw.java throw_name.java \
not.java \
and_or.java \
car.java \
cdr.java \
cxr.java \
list_p.java \
append.java \
reverse.java \
list_tail.java \
list_ref.java \
integer_p.java \
exact_p.java \
inexact_p.java \
positive_p.java \
max.java \
min.java \
NumberCompare.java \
multiply_oper.java \
divide_oper.java \
modulo.java \
gcd.java \
lcm.java \
fluid_let.java \
rationalize.java \
atan.java \
sqrt.java \
expt.java \
exact2inexact.java \
inexact2exact.java \
number2string.java \
string2number.java \
string_v.java \
string2list.java \
list2string.java \
string_ci_equal_p.java \
string_lessthan_p.java \
string_lessequal_p.java \
string_greaterthan_p.java \
string_greaterequal_p.java \
string_ci_lessthan_p.java \
string_ci_lessequal_p.java \
string_ci_greaterthan_p.java \
string_ci_greaterequal_p.java \
string_append.java \
vector2list.java \
vector_append.java \
force.java \
call_with_input_file.java \
call_with_output_file.java \
with_input_from_file.java \
with_output_to_file.java \
read.java \
readchar.java \
read_line.java \
char_ready_p.java \
open_input_file.java \
open_output_file.java \
call_with_output_string.java \
load.java \
constant_fold.java \
map.java \
callcc.java \
logand.java logior.java logxor.java \
define.java \
define_syntax.java syntax_rules.java let_syntax.java syntax_case.java \
require.java module_extends.java module_implements.java module_name.java \
module_static.java export.java define_unit.java \
syntax_error.java \
let.java \
letrec.java \
begin.java \
ifp.java \
call_with_values.java \
make_quantity.java quantity2number.java quantity2unit.java \
make_future.java sleep.java \
try_catch.java try_finally.java synchronizd.java \
convert.java \
make.java location.java \
define_alias.java define_variable.java define_autoload.java \
define_member_alias.java \
StaticFieldConstraint.java \
ScmEnv.java Scheme.java \
object.java define_class.java \
TracedProcedure.java \
scheme_env.java
